<resources>
    <string name="app_name">HungryPeople</string>

    <string name="restaurant">RESTAURANT</string>
    <string name="restaurant_name">HUNGRY PEOPLE</string>
    <string name="our_location">OUR LOCATION</string>
    <string name="about_us">ABOUT US</string>
    <string name="our_team">OUR TEAM</string>
    <string name="delicious_menu">DELICIOUS MENU</string>
    <string name="private_events">PRIVATE EVENTS</string>
    <string name="specialties">SPECIALTIES</string>
    <string name="gallery">GALLERY</string>
    <string name="contact">CONTACT</string>
    <string name="book_a_table">BOOK A TABLE</string>

    <string name="about_us_title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis at velit maximus, molestie est a, tempor magna.</string>
    <string name="about_us_desc">Integer ullamcorper neque eu purus euismod, ac faucibus mauris posuere. Morbi non ultrices ligula. Sed dictum, enim sed ullamcorper feugiat, dui odio vehicula eros, a sollicitudin lorem quam nec sem. Mauris tincidunt feugiat diam convallis pharetra. Nulla facilisis semper laoreet.</string>

    <string name="working_hours_mon_fri">Mon - Fri: 8PM - 10PM</string>
    <string name="working_hours_sat_sun">Sat - Sun: 8PM - 3AM</string>
    <string name="phone_number">Phone: +40 729 131 637/+40 726 458 782</string>

    <string name="img_background_desc">Background image</string>

    <string name="logo_app_desc">Logo</string>
    <string name="logo_facebook">Facebook</string>
    <string name="logo_instagram">Instagram</string>
    <string name="logo_twitter">Twitter</string>
    <string name="logo_email">Email</string>
    <string name="logo_phone">Phone</string>
    <string name="logo_card">Card</string>

    <string name="btn_book_table">BOOK TABLE</string>
    <string name="btn_explore">EXPLORE</string>
    <string name="btn_send">BOOK NOW</string>
    <string name="btn_send_message">SEND MESSAGE</string>
    <string name="btn_soupe">SOUPE</string>
    <string name="btn_pizza">PIZZA</string>
    <string name="btn_pasta">PASTA</string>
    <string name="btn_desert">DESERT</string>
    <string name="btn_wine">WINE</string>
    <string name="btn_beer">BEER</string>
    <string name="btn_drinks">DRINKS</string>

    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_phone">Phone</string>
    <string name="hint_people">People</string>
    <string name="hint_date">Date (mm/dd)</string>
    <string name="hint_time">Time</string>
    <string name="hint_message">Message</string>

    <string name="contact_address">5th London Boulevard, U.K.</string>
    <string name="contact_phone">+40 729 131 637 \\\n+40 726 458 782</string>
    <string name="contact_email">office@mindblister.com</string>

    <string name="price_format">\$%.2f</string>
</resources>