<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <ImageView
        android:id="@+id/background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg_home"
        android:scaleType="centerCrop"
        android:contentDescription="@string/img_background_desc" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.95" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_subtitle"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_box"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.55" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_schedule"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_buttons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_anchor"
        android:contentDescription="@string/logo_app_desc"
        app:layout_constraintBottom_toTopOf="@+id/guideline_logo"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_top" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/restaurant"
        android:textColor="@color/white"
        android:fontFamily="@font/tenorsans_regular"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="16sp"
        app:autoSizeMaxTextSize="30sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_subtitle"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_logo" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/restaurant_name"
        android:textColor="@color/white"
        android:fontFamily="@font/banny_bold"
        android:gravity="center"
        app:autoSizeTextType="uniform"
        app:autoSizeMinTextSize="30sp"
        app:autoSizeMaxTextSize="80sp"
        app:autoSizeStepGranularity="2sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_title"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_subtitle" />

    <View
        android:id="@+id/colored_box"
        android:layout_width="100dp"
        android:layout_height="10dp"
        android:background="@color/primary_color"
        android:outlineProvider="background"
        app:layout_constraintBottom_toTopOf="@+id/guideline_box"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_title"/>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_schedule"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/working_hours_mon_fri"
            android:fontFamily="@font/tenorsans_regular" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:text="@string/working_hours_sat_sun"
            android:fontFamily="@font/tenorsans_regular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_buttons"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_schedule">

        <Button
            android:id="@+id/btn_book_table"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_book_table"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/tenorsans_regular" />

        <Button
            android:id="@+id/btn_explore"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_margin="16dp"
            android:background="@drawable/btn_primary"
            android:text="@string/btn_explore"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:fontFamily="@font/tenorsans_regular" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_bottom"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/guideline_buttons">

        <ImageView
            android:id="@+id/logo_social_facebook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/btn_facebook"
            android:contentDescription="@string/logo_facebook" />

        <ImageView
            android:id="@+id/logo_social_instagram"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/btn_instagram"
            android:contentDescription="@string/logo_instagram" />

        <ImageView
            android:id="@+id/logo_social_twitter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:scaleType="centerInside"
            android:src="@drawable/btn_twitter"
            android:contentDescription="@string/logo_twitter" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>